--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
 
     <div class="header" id="header">
-        <h1>Welcome to SFF</h1>
+        <h1 style="padding-top: 20px;">SFF Filmstudio</h1>
     </div>
     
     <div class="container" id="container">
@@ -32,16 +32,12 @@
     </div>
 
     <div id="page"> 
-
         <div id="triviaList"></div>
-    
-        <div id="studio"></div>
         <div id="studioList"></div>
-
     </div>
 
     <script src="script.js"></script>
     <script src="trivias.js"></script>
-    <script src="login.js"></script>
+    <script src="studio.js"></script>
 </body>
 </html>
