--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     
     <div class="container" id="container">
         <div class="column" id="movie1">
-            <img src="https://m.media-amazon.com/images/M/MV5BMjM2MDgxMDg0Nl5BMl5BanBnXkFtZTgwNTM2OTM5NDE@._V1_.jpg" alt="Jurassic Park" style="width: 100%;">  
+            <img src="https://m.media-amazon.com/images/M/MV5BMjM2MDgxMDg0Nl5BMl5BanBnXkFtZTgwNTM2OTM5NDE@._V1_.jpg" style="width: 100%;">  
         </div>
         <div class="column" id="movie2">
-            <img src="https://m.media-amazon.com/images/M/MV5BNzQzMzJhZTEtOWM4NS00MTdhLTg0YjgtMjM4MDRkZjUwZDBlXkEyXkFqcGdeQXVyNjU0OTQ0OTY@._V1_SY1000_CR0,0,671,1000_AL_.jpg" alt="Jurassic Park" style="width: 100%;">        
+            <img src="https://m.media-amazon.com/images/M/MV5BNzQzMzJhZTEtOWM4NS00MTdhLTg0YjgtMjM4MDRkZjUwZDBlXkEyXkFqcGdeQXVyNjU0OTQ0OTY@._V1_SY1000_CR0,0,671,1000_AL_.jpg" style="width: 100%;">        
         </div>
         <div class="column" id="movie3">
             <img src="https://m.media-amazon.com/images/M/MV5BMTI5Mjg1MzM4NF5BMl5BanBnXkFtZTcwNTAyNzUzMw@@._V1_SY1000_CR0,0,674,1000_AL_.jpg" style="width: 100%;">        
